Applied patch #615, flag for an open backup file.
git-svn-id: svn+ssh://svn.code.sf.net/p/jedit/svn/jEdit/trunk@24820 6b1eeb88-9816-0410-afa2-b43733a0f04e